shell_grammar.txt
/* -------------------------------------------------------
   The grammar symbols
   ------------------------------------------------------- */
%token  WORD
%token  ASSIGNMENT_WORD
%token  AND_IF    OR_IF
/*      '&&'      '||'       */
%token  DLESS     DGREAT
/*      '<<'      '>>'       */

/* -------------------------------------------------------
   The Grammar
   ------------------------------------------------------- */
%start program
%%
program          :  and_or
                 ;

and_or           :        pipe_sequence and_or'
                 ;
and_or'          : AND_IF pipe_sequence and_or'
                 | OR_IF  pipe_sequence and_or'
                 | ℇ
				 ;

pipe_sequence    : command pipe_sequence'
                 ;
pipe_sequence'   | '|' command pipe_sequence'
                 | ℇ
                 ;

command          : simple_command
                 | subshell redirect_list
                 ;

subshell         : '(' and_or ')'
                 ;

simple_command   : cmd_prefix
                 | cmd_name cmd_suffix
                 : cmd_prefix cmd_word cmd_suffix
                 ;

cmd_name         : WORD          /* Apply rule 7a */
                 ;
cmd_word         : WORD          /* Apply rule 7b */
                 ;

cmd_prefix       : io_redirect cmd_prefix'
                 | ASSIGNMENT_WORD cmd_prefix'
                 ;
cmd_prefix'      : io_redirect cmd_prefix'
                 | ASSIGNMENT_WORD cmd_prefix'
                 | ℇ
                 ;

cmd_suffix       : io_redirect cmd_suffix
                 | WORD cmd_suffix
                 | ℇ
                 ;

redirect_list    : io_redirect redirect_list
                 | ℇ
                 ;

io_redirect      :           io_file
                 |           io_here
                 ;
                 
io_file          : '<'       filename
                 | '>'       filename
                 | DGREAT    filename
                 ;
                 
filename         : WORD           /* Apply rule 2 */
                 ;
                 
io_here          : DLESS     here_end
                 ;
                 
here_end         : WORD           /* Apply rule 3 */
                 ;
